Fix config throwing errors when used with Codec.map and similar